<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragcryptohome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_start">

    <RelativeLayout
        android:id="@+id/rlnewscrypto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:id="@+id/newscryptotiTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/f1fontbold"
            android:text="@string/newscryptoti"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">
        </TextView>
        <TextView
            android:id="@+id/newscryptocompTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/newscryptotiTextView"
            android:fontFamily="@font/f1fontregular"
            android:text="@string/newscryptocomp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
        <ImageView
            android:id="@+id/cryptohomeImageView"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="200dp"
            android:layout_below="@+id/newscryptocompTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/crypto">
        </ImageView>
        <TextView
            android:id="@+id/newscryptocomp2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cryptohomeImageView"
            android:fontFamily="@font/f1fontregular"
            android:text="@string/newscryptocomp2"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
        <TextView
            android:id="@+id/newscryptocomp3TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/newscryptocomp2TextView"
            android:fontFamily="@font/f1fontregular"
            android:text="@string/newscryptocomp3"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
        <TextView
            android:id="@+id/newscryptocomp4TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/newscryptocomp3TextView"
            android:fontFamily="@font/f1fontregular"
            android:text="@string/newscryptocomp4"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
        <TextView
            android:id="@+id/newscryptocomp5TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/newscryptocomp4TextView"
            android:fontFamily="@font/f1fontbold"
            android:text="@string/newscryptocomp5"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
        <TextView
            android:id="@+id/newscryptocomp6TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/newscryptocomp5TextView"
            android:fontFamily="@font/f1fontregular"
            android:text="@string/newscryptocomp6"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
        <com.ortiz.touchview.TouchImageView
            android:id="@+id/crypto2homeImageView"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="220dp"
            android:layout_below="@+id/newscryptocomp6TextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/crypto2">
        </com.ortiz.touchview.TouchImageView>
        <TextView
            android:id="@+id/newscryptocomp7TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/crypto2homeImageView"
            android:fontFamily="@font/f1fontregular"
            android:text="@string/newscryptocomp7"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
        <TextView
            android:id="@+id/newscryptocomp8TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/newscryptocomp7TextView"
            android:fontFamily="@font/f1fontregular"
            android:text="@string/newscryptocomp8"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
        <TextView
            android:id="@+id/newscryptocomp9TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/newscryptocomp8TextView"
            android:fontFamily="@font/f1fontregular"
            android:text="@string/newscryptocomp9"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
        </TextView>
    </RelativeLayout>

</ScrollView>