<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardviewListTeams"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="13dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linearLayoutcircuitsparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/effect_tr"
        android:layout_marginTop="-7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:padding="6dp">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="9.5dp"
                android:orientation="vertical">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/roundcircuitTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.75dp"
                        android:text="@string/round"
                        android:textColor="@color/colorGradientEnd"
                        android:textSize="15sp"
                        android:fontFamily="@font/f1fontbold">
                    </TextView>
                    <TextView
                        android:id="@+id/namecountryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/namecountry"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        android:textSize="18sp"
                        android:fontFamily="@font/f1fontbold">
                    </TextView>
                </TableRow>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/nameeventTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/nameevent"
                            android:textColor="@color/black"
                            android:textSize="10sp"
                            android:fontFamily="@font/f1fontregular">
                        </TextView>
                    </TableRow>
                </TableLayout>
            </TableLayout>

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutcircuitschild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/gradient_button"
        android:padding="3dp"
        android:layout_marginTop="64dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8sp"
                android:padding="6dp">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/fgpTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f1fontregular"
                        android:text="@string/fgp"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textAlignment="center"
                        android:layout_marginStart="5dp">
                    </TextView>
                    <TextView
                        android:id="@+id/nofTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f1fontregular"
                        android:text="@string/nof"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textAlignment="center"
                        android:layout_marginStart="30dp">
                    </TextView>
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/fgpresTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f1fontbold"
                        android:text="@string/fgpres"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginStart="5dp">
                    </TextView>
                    <TextView
                        android:id="@+id/nofresTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f1fontbold"
                        android:text="@string/nofres"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginStart="30dp">
                    </TextView>
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/clTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f1fontregular"
                        android:text="@string/cl"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textAlignment="center"
                        android:layout_marginStart="5dp">
                    </TextView>
                    <TextView
                        android:id="@+id/rdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f1fontregular"
                        android:text="@string/rd"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textAlignment="center"
                        android:layout_marginStart="30dp">
                    </TextView>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/clresTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f1fontbold"
                        android:text="@string/clres"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginStart="5dp">
                    </TextView>
                    <TextView
                        android:id="@+id/rdresTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f1fontbold"
                        android:text="@string/rdres"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginStart="30dp">
                    </TextView>
                </TableRow>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/lrTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/f1fontregular"
                            android:textAlignment="center"
                            android:text="@string/lr"
                            android:textColor="@color/black"
                            android:textSize="11sp">
                        </TextView>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/lrresTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/f1fontbold"
                            android:textAlignment="center"
                            android:text="@string/lrres"
                            android:textColor="@color/black"
                            android:textSize="15sp">
                        </TextView>
                    </TableRow>

                    <com.ortiz.touchview.TouchImageView
                        android:id="@+id/circuitImageView"
                        android:layout_width="100dp"
                        android:layout_height="250dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        app:srcCompat="@drawable/spain2">
                    </com.ortiz.touchview.TouchImageView>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <ImageView
                                android:id="@+id/flagcircuitImageView"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginTop="6dp"
                                app:srcCompat="@drawable/flagspain">
                            </ImageView>
                            <TextView
                                android:id="@+id/namecircuitTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_marginTop="6dp"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/f1fontregular"
                                android:text="@string/namecircuit"
                                android:textColor="@color/black"
                                android:textSize="15sp">
                            </TextView>
                        </TableRow>

                    </TableLayout>
                </TableLayout>
            </TableLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>